SQL_parser1/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'SHOW'", "'DATABASES'", "'CREATE'", 
                     "'DATABASE'", "'DROP'", "'USE'", "'TABLES'", "'INDEXES'", 
                     "'LOAD'", "'FROM'", "'FILE'", "'TO'", "'TABLE'", "'DUMP'", 
                     "'('", "')'", "'DESC'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'DELETE'", "'WHERE'", "'UPDATE'", "'SET'", "'SELECT'", 
                     "'GROUP'", "'BY'", "'LIMIT'", "'OFFSET'", "'INDEX'", 
                     "'ON'", "'ALTER'", "'ADD'", "'CHANGE'", "'RENAME'", 
                     "'PRIMARY'", "'KEY'", "'FOREIGN'", "'CONSTRAINT'", 
                     "'REFERENCES'", "'UNIQUE'", "','", "'NOT'", "'DEFAULT'", 
                     "'INT'", "'VARCHAR'", "'DATE'", "'FLOAT'", "'AND'", 
                     "'IS'", "'IN'", "'LIKE'", "'.'", "'*'", "'='", "'<'", 
                     "'<='", "'>'", "'>='", "'<>'", "'COUNT'", "'AVG'", 
                     "'MAX'", "'MIN'", "'SUM'", "'NULL'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "EqualOrAssign", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "NotEqual", "Count", "Average", "Max", "Min", "Sum", 
                      "Null", "Identifier", "Integer", "String", "Float", 
                      "Whitespace", "Annotation" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_system_statement = 2
    RULE_db_statement = 3
    RULE_io_statement = 4
    RULE_table_statement = 5
    RULE_select_table = 6
    RULE_index_statement = 7
    RULE_alter_statement = 8
    RULE_field_list = 9
    RULE_field = 10
    RULE_type_ = 11
    RULE_value_lists = 12
    RULE_value_list = 13
    RULE_value = 14
    RULE_where_and_clause = 15
    RULE_where_clause = 16
    RULE_column = 17
    RULE_expression = 18
    RULE_set_clause = 19
    RULE_selectors = 20
    RULE_selector = 21
    RULE_identifiers = 22
    RULE_operator = 23
    RULE_aggregator = 24

    ruleNames =  [ "program", "statement", "system_statement", "db_statement", 
                   "io_statement", "table_statement", "select_table", "index_statement", 
                   "alter_statement", "field_list", "field", "type_", "value_lists", 
                   "value_list", "value", "where_and_clause", "where_clause", 
                   "column", "expression", "set_clause", "selectors", "selector", 
                   "identifiers", "operator", "aggregator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    EqualOrAssign=56
    Less=57
    LessEqual=58
    Greater=59
    GreaterEqual=60
    NotEqual=61
    Count=62
    Average=63
    Max=64
    Min=65
    Sum=66
    Null=67
    Identifier=68
    Integer=69
    String=70
    Float=71
    Whitespace=72
    Annotation=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLParser.StatementContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SQLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SQLParser.T__1) | (1 << SQLParser.T__3) | (1 << SQLParser.T__5) | (1 << SQLParser.T__6) | (1 << SQLParser.T__9) | (1 << SQLParser.T__14) | (1 << SQLParser.T__17) | (1 << SQLParser.T__18) | (1 << SQLParser.T__21) | (1 << SQLParser.T__23) | (1 << SQLParser.T__25) | (1 << SQLParser.T__32))) != 0) or _la==SQLParser.Null or _la==SQLParser.Annotation:
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def system_statement(self):
            return self.getTypedRuleContext(SQLParser.System_statementContext,0)


        def db_statement(self):
            return self.getTypedRuleContext(SQLParser.Db_statementContext,0)


        def io_statement(self):
            return self.getTypedRuleContext(SQLParser.Io_statementContext,0)


        def table_statement(self):
            return self.getTypedRuleContext(SQLParser.Table_statementContext,0)


        def index_statement(self):
            return self.getTypedRuleContext(SQLParser.Index_statementContext,0)


        def alter_statement(self):
            return self.getTypedRuleContext(SQLParser.Alter_statementContext,0)


        def Annotation(self):
            return self.getToken(SQLParser.Annotation, 0)

        def Null(self):
            return self.getToken(SQLParser.Null, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.system_statement()
                self.state = 59
                self.match(SQLParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.db_statement()
                self.state = 62
                self.match(SQLParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.io_statement()
                self.state = 65
                self.match(SQLParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.table_statement()
                self.state = 68
                self.match(SQLParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.index_statement()
                self.state = 71
                self.match(SQLParser.T__0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.alter_statement()
                self.state = 74
                self.match(SQLParser.T__0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.match(SQLParser.Annotation)
                self.state = 77
                self.match(SQLParser.T__0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 78
                self.match(SQLParser.Null)
                self.state = 79
                self.match(SQLParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class System_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_system_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSystem_statement" ):
                return visitor.visitSystem_statement(self)
            else:
                return visitor.visitChildren(self)




    def system_statement(self):

        localctx = SQLParser.System_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_system_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(SQLParser.T__1)
            self.state = 83
            self.match(SQLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Db_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_db_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Show_dbsContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_dbs" ):
                return visitor.visitShow_dbs(self)
            else:
                return visitor.visitChildren(self)


    class Drop_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrop_db" ):
                return visitor.visitDrop_db(self)
            else:
                return visitor.visitChildren(self)


    class Show_tablesContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_tables" ):
                return visitor.visitShow_tables(self)
            else:
                return visitor.visitChildren(self)


    class Create_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_db" ):
                return visitor.visitCreate_db(self)
            else:
                return visitor.visitChildren(self)


    class Use_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUse_db" ):
                return visitor.visitUse_db(self)
            else:
                return visitor.visitChildren(self)


    class Show_indexesContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_indexes" ):
                return visitor.visitShow_indexes(self)
            else:
                return visitor.visitChildren(self)



    def db_statement(self):

        localctx = SQLParser.Db_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_db_statement)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SQLParser.Create_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(SQLParser.T__3)
                self.state = 86
                self.match(SQLParser.T__4)
                self.state = 87
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 2:
                localctx = SQLParser.Drop_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(SQLParser.T__5)
                self.state = 89
                self.match(SQLParser.T__4)
                self.state = 90
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 3:
                localctx = SQLParser.Show_dbsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(SQLParser.T__1)
                self.state = 92
                self.match(SQLParser.T__2)
                pass

            elif la_ == 4:
                localctx = SQLParser.Use_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(SQLParser.T__6)
                self.state = 94
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 5:
                localctx = SQLParser.Show_tablesContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.match(SQLParser.T__1)
                self.state = 96
                self.match(SQLParser.T__7)
                pass

            elif la_ == 6:
                localctx = SQLParser.Show_indexesContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.match(SQLParser.T__1)
                self.state = 98
                self.match(SQLParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Io_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_io_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Dump_dataContext(Io_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Io_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SQLParser.String, 0)
        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDump_data" ):
                return visitor.visitDump_data(self)
            else:
                return visitor.visitChildren(self)


    class Load_dataContext(Io_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Io_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SQLParser.String, 0)
        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoad_data" ):
                return visitor.visitLoad_data(self)
            else:
                return visitor.visitChildren(self)



    def io_statement(self):

        localctx = SQLParser.Io_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_io_statement)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLParser.T__9]:
                localctx = SQLParser.Load_dataContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(SQLParser.T__9)
                self.state = 102
                self.match(SQLParser.T__10)
                self.state = 103
                self.match(SQLParser.T__11)
                self.state = 104
                self.match(SQLParser.String)
                self.state = 105
                self.match(SQLParser.T__12)
                self.state = 106
                self.match(SQLParser.T__13)
                self.state = 107
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__14]:
                localctx = SQLParser.Dump_dataContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(SQLParser.T__14)
                self.state = 109
                self.match(SQLParser.T__12)
                self.state = 110
                self.match(SQLParser.T__11)
                self.state = 111
                self.match(SQLParser.String)
                self.state = 112
                self.match(SQLParser.T__10)
                self.state = 113
                self.match(SQLParser.T__13)
                self.state = 114
                self.match(SQLParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_table_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Delete_from_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete_from_table" ):
                return visitor.visitDelete_from_table(self)
            else:
                return visitor.visitChildren(self)


    class Insert_into_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def value_lists(self):
            return self.getTypedRuleContext(SQLParser.Value_listsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_into_table" ):
                return visitor.visitInsert_into_table(self)
            else:
                return visitor.visitChildren(self)


    class Create_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def field_list(self):
            return self.getTypedRuleContext(SQLParser.Field_listContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_table" ):
                return visitor.visitCreate_table(self)
            else:
                return visitor.visitChildren(self)


    class Describe_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescribe_table" ):
                return visitor.visitDescribe_table(self)
            else:
                return visitor.visitChildren(self)


    class Select_table_Context(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def select_table(self):
            return self.getTypedRuleContext(SQLParser.Select_tableContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_table_" ):
                return visitor.visitSelect_table_(self)
            else:
                return visitor.visitChildren(self)


    class Drop_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrop_table" ):
                return visitor.visitDrop_table(self)
            else:
                return visitor.visitChildren(self)


    class Update_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def set_clause(self):
            return self.getTypedRuleContext(SQLParser.Set_clauseContext,0)

        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdate_table" ):
                return visitor.visitUpdate_table(self)
            else:
                return visitor.visitChildren(self)



    def table_statement(self):

        localctx = SQLParser.Table_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_table_statement)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLParser.T__3]:
                localctx = SQLParser.Create_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(SQLParser.T__3)
                self.state = 118
                self.match(SQLParser.T__13)
                self.state = 119
                self.match(SQLParser.Identifier)
                self.state = 120
                self.match(SQLParser.T__15)
                self.state = 121
                self.field_list()
                self.state = 122
                self.match(SQLParser.T__16)
                pass
            elif token in [SQLParser.T__5]:
                localctx = SQLParser.Drop_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(SQLParser.T__5)
                self.state = 125
                self.match(SQLParser.T__13)
                self.state = 126
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__17]:
                localctx = SQLParser.Describe_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.match(SQLParser.T__17)
                self.state = 128
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__18]:
                localctx = SQLParser.Insert_into_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(SQLParser.T__18)
                self.state = 130
                self.match(SQLParser.T__19)
                self.state = 131
                self.match(SQLParser.Identifier)
                self.state = 132
                self.match(SQLParser.T__20)
                self.state = 133
                self.value_lists()
                pass
            elif token in [SQLParser.T__21]:
                localctx = SQLParser.Delete_from_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 134
                self.match(SQLParser.T__21)
                self.state = 135
                self.match(SQLParser.T__10)
                self.state = 136
                self.match(SQLParser.Identifier)
                self.state = 137
                self.match(SQLParser.T__22)
                self.state = 138
                self.where_and_clause()
                pass
            elif token in [SQLParser.T__23]:
                localctx = SQLParser.Update_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.match(SQLParser.T__23)
                self.state = 140
                self.match(SQLParser.Identifier)
                self.state = 141
                self.match(SQLParser.T__24)
                self.state = 142
                self.set_clause()
                self.state = 143
                self.match(SQLParser.T__22)
                self.state = 144
                self.where_and_clause()
                pass
            elif token in [SQLParser.T__25]:
                localctx = SQLParser.Select_table_Context(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 146
                self.select_table()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_tableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectors(self):
            return self.getTypedRuleContext(SQLParser.SelectorsContext,0)


        def identifiers(self):
            return self.getTypedRuleContext(SQLParser.IdentifiersContext,0)


        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def column(self):
            return self.getTypedRuleContext(SQLParser.ColumnContext,0)


        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.Integer)
            else:
                return self.getToken(SQLParser.Integer, i)

        def getRuleIndex(self):
            return SQLParser.RULE_select_table

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_table" ):
                return visitor.visitSelect_table(self)
            else:
                return visitor.visitChildren(self)




    def select_table(self):

        localctx = SQLParser.Select_tableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_select_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(SQLParser.T__25)
            self.state = 150
            self.selectors()
            self.state = 151
            self.match(SQLParser.T__10)
            self.state = 152
            self.identifiers()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__22:
                self.state = 153
                self.match(SQLParser.T__22)
                self.state = 154
                self.where_and_clause()


            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__26:
                self.state = 157
                self.match(SQLParser.T__26)
